criando a pokédex com JS

--- a/Bootcamps/OrangeTech_Inter/index.html
+++ b/Bootcamps/OrangeTech_Inter/index.html
@@ -24,26 +24,7 @@
 <body>
     <section class="content">
         <h1>Pokédex</h1>
-        <ol class="pokemons">
-            <li>Pidgeotto
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/17.svg" alt="Pidgeot">
-            </li>
-            <li>Butterfree
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/12.svg" alt="Butterfree">
-            </li>
-            <li>Bulbasaur
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bulbasaur">
-            </li>
-            <li>Charmander
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg" alt="Charmander">
-            </li>
-            <li>Squirtle
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/7.svg" alt="Squirtle">
-            </li>
-            <li>Pikachu
-                <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/25.svg" alt="Pikachu">
-            </li>
-        </ol>
+        <ol id="listaPokemon" class="pokemons"></ol>
     </section>
 
     <script src="./Assets/JS/main.js"></script>
