Deixando a requisição http em um arquivo separado

--- a/Bootcamps/OrangeTech_Inter/index.html
+++ b/Bootcamps/OrangeTech_Inter/index.html
@@ -27,6 +27,7 @@
         <ol id="listaPokemon" class="pokemons"></ol>
     </section>
 
+    <script src="./Assets/JS/pokeAPI.js"></script>
     <script src="./Assets/JS/main.js"></script>
 </body>
 
