--- a/WorkShop/Clone_NetFlix/public/index.html
+++ b/WorkShop/Clone_NetFlix/public/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+
     <title>Clone NetFlix</title>
 </head>
+
 <body>
+    <!-- NAVBAR -->
+    <nav class="navbar">
+        <img src="img/logo.png" alt="logo netflix" class="logo">
+        <div class="join-box">
+            <p class="join-msg">Séries & Filmes ilimitados</p>
+            <button class="btn join-btn">Assinar agora</button>
+            <button class="btn">Entrar</button>
+        </div>
+    </nav>
 </body>
+
 </html>
