--- a/WorkShop/Clone_NetFlix/public/index.html
+++ b/WorkShop/Clone_NetFlix/public/index.html
@@ -21,6 +21,24 @@
             <button class="btn">Entrar</button>
         </div>
     </nav>
+
+    <!-- MAIN SECTION -->
+    <header class="main">
+        <h1 class="heading">Filmes</h1>
+        <p class="info">Filmes para assistir com toda a família</p>
+
+        <!-- MOVIES LIST -->
+        <div class="movie-list">
+            <h1 class="movie-category">Populares no Netflix</h1>
+
+            <div class="movie-container">
+                <div class="movie">
+                    <img src="./img/poster-1.png" alt="The Witcher">
+                    <p class="movie-title">The Witcher</p>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
