--- a/WorkShop/Clone_NetFlix/public/index.html
+++ b/WorkShop/Clone_NetFlix/public/index.html
@@ -1,3 +1,5 @@
+<!-- link do vídeo do projeto > https://www.youtube.com/watch?v=JxZf4mxtu64&t=1707s&ab_channel=DIO -->
+<!-- link do github do projeto > https://github.com/felipeAguiarCode/netflix-clone-2.0 -->
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -28,17 +30,11 @@
         <p class="info">Filmes para assistir com toda a família</p>
 
         <!-- MOVIES LIST -->
-        <div class="movie-list">
-            <h1 class="movie-category">Populares no Netflix</h1>
-
-            <div class="movie-container">
-                <div class="movie">
-                    <img src="./img/poster-1.png" alt="The Witcher">
-                    <p class="movie-title">The Witcher</p>
-                </div>
-            </div>
-        </div>
     </header>
+
+    <script src="./js/api.js"></script>
+    <script src="./js/home.js"></script>
+    <script src="./js/scroll.js"></script>
 </body>
 
 </html>
